mysandbox-pw/mysandbox-pw.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysandbox-pw
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: mysandbox-pw
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysandbox-pw
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mysandbox-pw
  template:
    metadata:
      labels:
        app: mysandbox-pw
    spec:
      containers:
      - name: hello-kubernetes
        image: ptorrezao/landingpage:latest 
        ports:
        - containerPort: 80
