mysandbox-pw/hello-kubernetes-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - www.mysandbox.pw
    secretName: hello-kubernetes-tls
  rules:
  - host: www.mysandbox.pw
    http:
      paths:
      - backend:
          serviceName: hello-kubernetes-second
          servicePort: 80
