mysandbox-pw/mysandbox-pw-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mysandbox-pw-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - www.mysandbox.pw
    secretName: mysandbox-pw-tls
  rules:
  - host: www.mysandbox.pw
    http:
      paths:
      - backend:
          serviceName: mysandbox-pw
          servicePort: 80
